hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /blue(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-blue
            port:
              number: 80
      - path: /green(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-green
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-root
            port:
              number: 80
    # host: hello-world-ingress.MY_CUSTOM_DOMAIN
